add_subdirectory(FileFilterTest)
add_subdirectory(FileSystemManagerTest)
#add_subdirectory(FileSystemRepositoryTest)
#add_subdirectory(GoogleCloudStorageTest)
#add_subdirectory(HadoopFileSystemTest)
add_subdirectory(LocalFileSystemTest)
add_subdirectory(PathTest)
#add_subdirectory(S3FileSystemTest)
add_subdirectory(UriTest)
